[tool.poetry]
name = "llm_chat"
version = "0.1.0"
description = ""
authors = ["Chaim Turkel <cyturel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.1"
langchain = "0.2.0"
langchain-openai = "0.1.7"
openai = "1.30.1"
streamlit = "1.34.0"
streamlit-agraph = "0.0.45"



[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
coverage = "^7.1.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
